# movr

./: .Rbuildignore  .Rspelling  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  DESCRIPTION  INSTALL  INSTALL.md  LICENSE  NAMESPACE  README.md  check.sh  configure  configure.win  install.sh  release.sh  render_docs.R
.cursor/rules/: core.mcd
.github/workflows/: cran-check.yml
R/: Rcolors.R  coordinates.R  coords.R  data.R  data_quality.R  dataquality.R  dq.R  fit_dist.R  fitdist.R  fitdists.R  flowmap.R  gcd.R  great_circle_distance.R  heatmap.R  map.R  map3d.R  maputils.R  midpoint.R  minor_ticks.R  misc.R  mobility_graph.R  movr.r  plot.R  plot_mobility.R  predictability.R  radius_of_gyration.R  radiusgyration.R  rgl_layers.R  seq.R  sequences.R  stat.R  stcoords.R  stcorr.R  stutils.R  transform-coords.R  transform-v.R  utils.R
cmake/: FindR.cmake
data/: movement.rda  u10.rda
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
inst/: WORDLIST
man/: Q.iovan.Rd  RMSE.Rd  Rcolors.Rd  axis.minor.ticks.Rd  cal_place_dwelling.Rd  cart2geo.Rd  cart2geo.radian.Rd  compress_mov.Rd  compress_mov2_todo.Rd  deg2rad.Rd  dq.iovan.Rd  dq.point.Rd  dq.point.dynamic.Rd  dq.point.static.Rd  dq.point2.Rd  dq.traj.Rd  dq.traj2.Rd  draw_flowmap.Rd  draw_mobility3d.Rd  entropy.rand.Rd  entropy.space.Rd  entropy.spacetime.Rd  entropy_rand.Rd  entropy_space.Rd  entropy_spacetime.Rd  euc.dist.Rd  fast.radius.of.gyration.Rd  fit.polyexp.Rd  fit.power.law.Rd  fit.truncated.power.law.Rd  fit_polyexp.Rd  fit_power_law.Rd  fit_truncated_power_law.Rd  flow.stat.Rd  flow_stat.Rd  flowmap.Rd  flowmap2.Rd  flowmap_stat.Rd  gcd.Rd  gen.sessions.Rd  (+52 more)
scripts/: README.md  check_cran.sh  cran_release_check.R  release.sh  render_docs.R  render_docs.sh  test_build.sh
src/: Makefile  Makefile.win  Makevars  Makevars.win  flowmap.c  init.c  order.c  order.h  radius-of-gyration.c
tests/: testthat.R
tests/testthat/: test-native-c.R
